...
    func prepareTableView() {
        tableView.delegate = self
        tableView.dataSource = self
        tableView.backgroundColor = .white
        tableView.register(cellType: MovieTableViewCell.self)
        tableView.register(cellType: SliderTableViewCell.self)
        tableView.accessibilityIdentifier = "tableViewIdentifier"
    }

    func prepareSearchTableView() {
        searchTableView.accessibilityIdentifier = "searchTableViewIdentifier"
        searchTableView.isHidden = true
        searchTableView.delegate = self
        searchTableView.dataSource = self
        searchTableView.backgroundColor = UIColor(red: 0.0, green: 0.0, blue: 0.0, alpha: 0.5)
        searchTableView.register(cellType: SearchTableViewCell.self)
    }
...
