...

    var numberOfObjects: Int {
        objects.count
    }

    func viewDidLoad() {
        view?.prepareSearchBar("Search Movie")
        view?.prepareTableView()
        view?.prepareSearchTableView()
        fetchUpcomingAndNowPlayingMovies()
    }

    func viewWillAppear(_ animated: Bool) {
...
